fix compile problem mentioned in https://github.com/boennecd/mssm/issues/1 make other minor changes to fix -wextra warnings on gcc-8.3 change readme to use latex.codecogs.com again. The server seems to work now

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,7 @@
 ---
 output:
   github_document:
-    pandoc_args: --webtex=https://chart.googleapis.com/chart?cht=tx&chl=
+    pandoc_args: --webtex=https://latex.codecogs.com/svg.latex?
 bibliography: README.bib
 nocite: |
   @Polyak92
