change CRAN URL to canonical form

--- a/README.bib
+++ b/README.bib
@@ -6,17 +6,7 @@ volume = {30},
 number = {4},
 pages = {838-855},
 year = {1992},
-doi = {10.1137/0330046},
-
-URL = {
-        https://doi.org/10.1137/0330046
-
-},
-eprint = {
-        https://doi.org/10.1137/0330046
-
-}
-
+URL = {https://doi.org/10.1137/0330046}
 }
 
 @INPROCEEDINGS{Gray03,
@@ -35,17 +25,7 @@ number = {472},
 pages = {1412-1421},
 year  = {2005},
 publisher = {Taylor & Francis},
-doi = {10.1198/016214505000000349},
-
-URL = {
-        https://doi.org/10.1198/016214505000000349
-
-},
-eprint = {
-        https://doi.org/10.1198/016214505000000349
-
-}
-
+URL = {https://doi.org/10.1198/016214505000000349}
 }
 
 @inproceedings{Klaas06,
@@ -58,7 +38,7 @@ eprint = {
  location = {Pittsburgh, Pennsylvania, USA},
  pages = {481--488},
  numpages = {8},
- url = {http://doi.acm.org/10.1145/1143844.1143905},
+ url = {https://doi.acm.org/10.1145/1143844.1143905},
  acmid = {1143905},
  publisher = {ACM},
  address = {New York, NY, USA},
@@ -66,7 +46,7 @@ eprint = {
 
 @article{Poyiadjis11,
  ISSN = {00063444},
- URL = {http://www.jstor.org/stable/29777165},
+ URL = {https://www.jstor.org/stable/29777165},
  author = {Poyiadjis, George and Doucet, Arnaud and Singh, Sumeetpal S. },
  journal = {Biometrika},
  number = {1},
