--- a/README.bib
+++ b/README.bib
@@ -16,6 +16,20 @@ URL = {https://doi.org/10.1137/0330046}
     year = {2003}
 }
 
+@article{Durbin97,
+ ISSN = {00063444},
+ URL = {http://www.jstor.org/stable/2337587},
+ abstract = {State space models are considered for observations which have non-Gaussian distributions. We obtain accurate approximations to the loglikelihood for such models by Monte Carlo simulation. Devices are introduced which improve the accuracy of the approximations and which increase computational efficiency. The loglikelihood function is maximised numerically to obtain estimates of the unknown hyperparameters. Standard errors of the estimates due to simulation are calculated. Details are given for the important special cases where the observations come from an exponential family distribution and where the observation equation is linear but the observation errors are non-Gaussian. The techniques are illustrated with a series for which the observations have a Poisson distribution and a series for which the observation have a t-distribution.},
+ author = {J. Durbin and S. J. Koopman},
+ journal = {Biometrika},
+ number = {3},
+ pages = {669--684},
+ publisher = {[Oxford University Press, Biometrika Trust]},
+ title = {Monte Carlo Maximum Likelihood Estimation for Non-Gaussian State Space Models},
+ volume = {84},
+ year = {1997}
+}
+
 @article{Lin05,
 author = {Ming T Lin and Junni L Zhang and Qiansheng Cheng and Rong Chen},
 title = {Independent Particle Filters},
